idp2(Sandle): part 2

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -1,6 +1,6 @@
 # Резюме просмотра курса Майкла Сэндела ["Справедливость"](https://www.youtube.com/playlist?list=PL8YZyma552VeTCYPkkEisHKAHhNx3Psk-)
 
-## 1. Моральная сторона убийста
+## 1. Моральная сторона убийства
 ### Вступление
 
 Лектор приводит умозрительные примеры:
@@ -45,3 +45,43 @@
 3. какую роль играет согласие в вопросах морали
 
 Не могу не отметить то, что для иллюстрации разницы различных философских теорий здесь было бы полезно вспомнить [абсолютно аналогичный случай, но с противоположным исходом](https://ru.wikipedia.org/wiki/%D0%94%D1%80%D0%B5%D0%B9%D1%84_%D1%81%D0%B0%D0%BC%D0%BE%D1%85%D0%BE%D0%B4%D0%BD%D0%BE%D0%B9_%D0%B1%D0%B0%D1%80%D0%B6%D0%B8_%D0%A2-36).
+
+## 2. Цена жизни
+
+### Постановка вопросов к учению Бентама
+
+Продолжено рассмотрение утилитаризма.
+Ставится вопрос о цене жизни на примерах:
+- [табачная кампания Phillip Morris в ответ на намерении правительства Чехии увеличить табачные акцизы провела исследование пользы и вреда, которые наносят курильщики экономике Чехии](http://news.bbc.co.uk/hi/russian/news/newsid_1442000/1442719.stm) (польза: доход от акцизов, ранняя смертность курильщиков, снижение пенсионных выплат)
+- скандал с Ford Pinto: автомобиль имел проблему со взрывающимся баком, но кампания сознательно не стала ее исправлять, т.к. [внесение конструктивных изменений в модель потребует затрат в размере 121 млн долларов, в то время как выплаты жертвам катастроф (или их родственникам) обойдется компании всего в 50 млн долларов](https://businessrevisor.ru/2019/03/ford-pinto-case/)
+
+Лектор задает вопрос о приемлимости такого подхода. Варианты ответов аудитории:
+- сам вопрос некорректен (жизнь нельзя измерить деньгами)
+- цена слишком мала (жизнь можно измерить деньгами)
+
+Вопрос о цене жизни регулярно возникает при анализе экономической эффективности.
+
+Большинство аудитории согласно, что при принятии законов утилитаристкий подход приемлем.
+
+Возражение: у меньшиства есть некие права, которые нельзя попирать даже в угоду общему благу (пример: если следовать утилитаризму то кидать несколько человек на растерзание львам на арене приемлемо, т.к. намного большее количество людей в это время веселится на трибунах).
+
+Формулируются аргументы против утилитаризма:
+- не учитываются права личности и права меньшиства
+- нельзя все оценить в деньгах
+
+И вопрос: как тогда применять утилитаристкую теорию морали, если есть некоторые вещи, которые нельзя оценить?
+
+### В чем измерять "удовольствие"
+
+В дополнение к предыдущим вопросам ставится еще один: не стоит ли различать "высокие" и "низкие" удовольстия?
+
+Далее обсуждается рассмотрение этих вопросов философом Джоном Стюартом Милли, который, по мнению лектора пытался расширить утилитаризм так, чтобы в нем нашлось место гуманистическому подходу.
+
+Миль: "Единственное подтверждение того, что люди чего то хотят - это непосредственно желание людей"
+
+Для того, чтобы отделить "высокие" удовольствия от "низких", Миль предлагает попробовать и те и другие. И то удовольствие, которое предпочтет большинство и будет "высоким".
+
+Лектор демонстрирует 3 видео: отрывок из "Гамлета", трейлер шоу "Fear factor", отрывок из "Симсонов" и спрашивает, что из этого является высшим удовольствием.
+Один из слушателей приводит довод, что эти видео подтверждают метод Миля: если бы ему пришлось выбрать, какое из трех видео он будет смотреть остаток жизни, то он бы выбрал "Гамлета" потому что это произведение сложнее, многослойнее и удовольствие, полученное от него будет больше, чем от простых шоу.
+
+Миль: "Справедливость - это совокупность требований морали, более высоких для общества в целом, с точки зрения пользы, а значит, и претендующих на обязательность сильнее, чем остальные".
