idp2(Sandel): part 3

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -21,10 +21,10 @@
 
 ### Консеквенциальная теория морали и философия утилитаризма
 
-Иеремия Бентам - утилитаристкая этика - моральная ценность поступка определяется его полезностью.
+[Иеремия Бентам](https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D0%BD%D1%82%D0%B0%D0%BC,_%D0%98%D0%B5%D1%80%D0%B5%D0%BC%D0%B8%D1%8F) - утилитаристкая этика - моральная ценность поступка определяется его полезностью.
 
 Полезность определяется тем, насколько меньше будет вес страданий и насколько больше будет вес удовольствий.
-"Принцип наибольшего счастья наибольшего числа индивидуумов".
+**"Принцип наибольшего счастья наибольшего числа индивидуумов"**
 
 Лектор рассматривает утилитарную этику применительно к реальному случаю - [истории экипажа яхты "Резеда"](https://www.yachtrussia.com/articles/2016/11/14/articles_415.html) и предлагает аудитории решить, можно ли считать действия Дадли и Стивенсона оправданными.
 
@@ -44,7 +44,11 @@
 2. оправдывает ли честный регламент на некую процедуру любой результат этот процедуры
 3. какую роль играет согласие в вопросах морали
 
+***
+*Мои заметки*
+
 Не могу не отметить то, что для иллюстрации разницы различных философских теорий здесь было бы полезно вспомнить [абсолютно аналогичный случай, но с противоположным исходом](https://ru.wikipedia.org/wiki/%D0%94%D1%80%D0%B5%D0%B9%D1%84_%D1%81%D0%B0%D0%BC%D0%BE%D1%85%D0%BE%D0%B4%D0%BD%D0%BE%D0%B9_%D0%B1%D0%B0%D1%80%D0%B6%D0%B8_%D0%A2-36).
+***
 
 ## 2. Цена жизни
 
@@ -75,13 +79,100 @@
 
 В дополнение к предыдущим вопросам ставится еще один: не стоит ли различать "высокие" и "низкие" удовольстия?
 
-Далее обсуждается рассмотрение этих вопросов философом Джоном Стюартом Милли, который, по мнению лектора пытался расширить утилитаризм так, чтобы в нем нашлось место гуманистическому подходу.
+Далее обсуждается рассмотрение этих вопросов философом [Джоном Стюартом Миллем](https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%BB%D1%8C,_%D0%94%D0%B6%D0%BE%D0%BD_%D0%A1%D1%82%D1%8E%D0%B0%D1%80%D1%82), который, по мнению лектора пытался расширить утилитаризм так, чтобы в нем нашлось место гуманистическому подходу.
 
-Миль: "Единственное подтверждение того, что люди чего то хотят - это непосредственно желание людей"
+Милль: "Единственное подтверждение того, что люди чего то хотят - это непосредственно желание людей"
 
-Для того, чтобы отделить "высокие" удовольствия от "низких", Миль предлагает попробовать и те и другие. И то удовольствие, которое предпочтет большинство и будет "высоким".
+Для того, чтобы отделить "высокие" удовольствия от "низких", Милль предлагает попробовать и те и другие. И то удовольствие, которое предпочтет большинство и будет "высоким".
 
 Лектор демонстрирует 3 видео: отрывок из "Гамлета", трейлер шоу "Fear factor", отрывок из "Симсонов" и спрашивает, что из этого является высшим удовольствием.
 Один из слушателей приводит довод, что эти видео подтверждают метод Миля: если бы ему пришлось выбрать, какое из трех видео он будет смотреть остаток жизни, то он бы выбрал "Гамлета" потому что это произведение сложнее, многослойнее и удовольствие, полученное от него будет больше, чем от простых шоу.
 
-Миль: "Справедливость - это совокупность требований морали, более высоких для общества в целом, с точки зрения пользы, а значит, и претендующих на обязательность сильнее, чем остальные".
+Этим тестом (выбор большинством "Симпсонов") лектор показал, что возможно критерий наибольшего удовольствия наибольшого числа индивидов не так уж хорош.
+
+Милль: "Справедливость - это совокупность требований морали, более высоких для общества в целом, с точки зрения пользы, а значит, и претендующих на обязательность сильнее, чем остальные".
+
+## 3. Свобода выбора
+
+### Подход либертарианства
+
+"Милль склоняется к тому, что права личности занимают особое место. Милль говорит, что справедливость это основная часть морали".
+
+Вопрос к Милю: почему в основу морали должа ложиться справедливость для индивидов.
+Милль отвечает, что в долгосрочной перспективе соблюдение морали и справедливость работают на благо всего общества.
+Это подход демонстрируется на примере 4 из первой лекции: если бы врач убил одного и спас с помощью трансплатации его органов пятерых, то в долгосрочной перспективе люди не ходили бы на обследования и из-за этого умерло бы куда больше.
+
+Но является ли это единственной причиной не убивать одного ради пятерых?
+
+Существует ли какая то другая теория прав человека, объясняющая позицию Миля по вопросу справедливости?
+
+**Либертарианство** - направление философской мысли, которое подчеркивает право личности на свободу.
+"Нельзя использовать человека на благо общества потому что так надо".
+"Каждый вправе выбирать, как проживать жизнь, при условии уважения остальных членов общества".
+
+***
+*Мои заметки*
+
+*Очень резкий скачок к рассуждениям о государстве без ввода понятийного аппарата.*
+***
+
+Далее приводятся тезисы идеолога либертарианства Роберта Нозика о роли государства и правительства в жизни общества.
+Большинство современных государств обладают 3 чертами, которые согласно либертарианству недопустимы и несправедливы:
+1. законы патерналисткого толка (законы в защиту людей от самих себя - например, о ремнях безопасности)
+2. законы, основанные на морали (например, запрет однополых связей)
+3. налогообложение и другие законы, направленные на перераспределение средств между богатыми и бедными
+
+Лектор задает аудитории вопрос о согласии с 3м пунктом. И приводит пример США, в которых один из самых больших разрывов между богатыми и бедными.
+Р.Нозик считает, что для того, чтобы ответить на этот вопрос нужно знать:
+1. справедливость приобретения (изначальные блага)
+2. справедливость распределения (производилось ли перераспределение добровольно - свободный рынок)
+
+Лектор задает аудитории вопрос о справедливость пункта 2. - справедливо ли, например, отбирать треть дохода у Майкла Джордана (78 млн $ его годовой доход).
+Большинство аудитории согласно, что это справедливо.
+
+Аргументы Нозика против налогов: **налоги = отъем зарботка, отъем заработка = принуждение к труду, принуждение к труду = рабство => и это является нарушением права собственности на самого себя.**
+
+В конечном счете с точки зрения либертарианства все мы - единственные собственники самих себя и это **главное противоречие с утилитаризмом**.
+
+И именно по этой же причине нельзя, например, убить одного человека ради спасения пятерых.
+
+
+
+### В чем измерять удовольствие
+
+[Милтон Фридман](https://ru.wikipedia.org/wiki/%D0%A4%D1%80%D0%B8%D0%B4%D0%BC%D0%B0%D0%BD,_%D0%9C%D0%B8%D0%BB%D1%82%D0%BE%D0%BD): "Многие функции государства, полагаемый само собой разумеющимися, на самом деле таковыми не являются - они отражают патерналисткий подход"
+
+
+Далее происходит дискуссия с либертарианцам из аудитории по аргументам за перераспределение от богатых к бедным:
+1. бедным деньги нужнее
+2. налоги != рабство, по крайней мере в случае США, где конгресс - демократический орган (налоги по согласию - не принуждение)
+3. успешные люди в долгу перед обществом
+4. богатство - это не только личная заслуга, но и удача
+
+Ответы:
+1. положительные стороны перераспределения не отменяют факт воровства - можно призывать жертвовать деньги на благотворительность, но нельзя заставлять удовлетворять нужды бедных
+> контраргумент: пострадавшие от урагана "Катрина" не заслуживают помощи?
+2. демократию надо ограничивать; право не дать перераспределить заработанные деньги - такое же как право на свободу слова и свободу вероисповедания
+> контрагумент: богатые заработали состояния за счет существования в стабильной экономической среде, которое обеспечивает государство
+3. нет долга перед обществом - они предложили обществу то, что люди высоко ценят
+> как ответ отвергается сам базис о том, что человек принадлежит самому себе - если ты живешь в обществе, ты не можешь принадлежать только самому себе
+4. удача здесь не имеет значения - даже если она и была, то все равно деньги были заработаны в результате честного обмена с другими людьми, которые платили за услуги
+
+Можно ли отвергнуть базис либертарианства и признать, что мы принадлежим себе не полностью и все равно построить общество справедливости в котором некоторых нельзя использовать ради чужого благополучися или даже общей выгоды.
+
+***
+*Мои заметки*
+
+Либертарианство в попытке противостоять утилитаризму (с его пренебрежением к правам отдельной личности) поместило в центр мира индивида и никак не отвечает задаче сохранения и развития человечества как вида. А потому оно не может служить прогрессу, его удел - быть инструментом в руках меньшиства эксплуатирующего большинство (однажды во время дискуссии на тему платного высшего образования, Фридман произнёс следующую фразу: «Society doesn’t have goals, people have goals» (У общества целей нет, цели есть у индивидуальностей) - я в корне с этим не согласен. У общества есть цель - защитить своих настоящих и будущих членов, распространить себя)
+
+К вопросу о неравенстве - на примере США не так интересно, как на примере России, нашел данные ([источник РБК](https://www.rbc.ru/economics/16/12/2017/5a33e2fc9a79471b6d846e24)):
+
+![alt text](https://s0.rbk.ru/v6_top_pics/resized/945xH/media/img/5/16/755134446399165.jpg "Logo Title Text 1")
+
+
+Также в дискуссиях расматриваются сферические в вакууме успешные люди, капиталы которых удовлетворяют принципам справедливости приобретения и справедливости распределения.
+Видимо, эти люди никогда не слышали о приватизации в странах бСССР, Чили и прочих, когда функционирующие производства изымались из общественной собственности мошеническими манипуляциями.
+
+Я понимаю, что это учебная дискуссия, но нельзя отрываться от окружающей реальности.
+
+***
