idp2(Sandel): part 4

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -34,8 +34,7 @@
 
 Далее поднимается вопрос согласия :
 - Паркер сам соглашается быть жертвой
-- все тянут жребий
-Является ли в таком виде убийство морально приемлимым? Для части аудитории да.
+- все тянут жребий; является ли в таком виде убийство морально приемлимым? Для части аудитории да.
 
 Показывается, что рассуждения в рамках утилитарной этики приводят к выводу о большем счастье в варианте "три выживших человека, от которых зависят жизни других людей и один умерший сирота" безотносительно вопроса согласия.
 
@@ -79,7 +78,7 @@
 
 В дополнение к предыдущим вопросам ставится еще один: не стоит ли различать "высокие" и "низкие" удовольстия?
 
-Далее обсуждается рассмотрение этих вопросов философом [Джоном Стюартом Миллем](https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%BB%D1%8C,_%D0%94%D0%B6%D0%BE%D0%BD_%D0%A1%D1%82%D1%8E%D0%B0%D1%80%D1%82), который, по мнению лектора пытался расширить утилитаризм так, чтобы в нем нашлось место гуманистическому подходу.
+Далее обсуждается рассмотрение этих вопросов философом [Джоном Стюартом Миллем](https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%BB%D1%8C,_%D0%94%D0%B6%D0%BE%D0%BD_%D0%A1%D1%82%D1%8E%D0%B0%D1%80%D1%82), который, по мнению лектора, пытался расширить утилитаризм так, чтобы в нем нашлось место гуманистическому подходу.
 
 Милль: "Единственное подтверждение того, что люди чего то хотят - это непосредственно желание людей"
 
@@ -98,13 +97,13 @@
 
 "Милль склоняется к тому, что права личности занимают особое место. Милль говорит, что справедливость это основная часть морали".
 
-Вопрос к Милю: почему в основу морали должа ложиться справедливость для индивидов.
+Вопрос к Милю: почему в основу морали должна ложиться справедливость для индивидов.
 Милль отвечает, что в долгосрочной перспективе соблюдение морали и справедливость работают на благо всего общества.
 Это подход демонстрируется на примере 4 из первой лекции: если бы врач убил одного и спас с помощью трансплатации его органов пятерых, то в долгосрочной перспективе люди не ходили бы на обследования и из-за этого умерло бы куда больше.
 
 Но является ли это единственной причиной не убивать одного ради пятерых?
 
-Существует ли какая то другая теория прав человека, объясняющая позицию Миля по вопросу справедливости?
+Существует ли какая то другая теория прав человека, объясняющая позицию Милля по вопросу справедливости?
 
 **Либертарианство** - направление философской мысли, которое подчеркивает право личности на свободу.
 "Нельзя использовать человека на благо общества потому что так надо".
@@ -116,14 +115,14 @@
 *Очень резкий скачок к рассуждениям о государстве без ввода понятийного аппарата.*
 ***
 
-Далее приводятся тезисы идеолога либертарианства Роберта Нозика о роли государства и правительства в жизни общества.
+Далее приводятся тезисы идеолога либертарианства [Роберта Нозика](https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B7%D0%B8%D0%BA,_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82) о роли государства и правительства в жизни общества.
 Большинство современных государств обладают 3 чертами, которые согласно либертарианству недопустимы и несправедливы:
 1. законы патерналисткого толка (законы в защиту людей от самих себя - например, о ремнях безопасности)
 2. законы, основанные на морали (например, запрет однополых связей)
 3. налогообложение и другие законы, направленные на перераспределение средств между богатыми и бедными
 
 Лектор задает аудитории вопрос о согласии с 3м пунктом. И приводит пример США, в которых один из самых больших разрывов между богатыми и бедными.
-Р.Нозик считает, что для того, чтобы ответить на этот вопрос нужно знать:
+Р.Нозик считает, что для того, чтобы ответить на этот вопрос нужно знать выполнялись ли следующие условия:
 1. справедливость приобретения (изначальные блага)
 2. справедливость распределения (производилось ли перераспределение добровольно - свободный рынок)
 
@@ -176,3 +175,45 @@
 Я понимаю, что это учебная дискуссия, но нельзя отрываться от окружающей реальности.
 
 ***
+
+## 4. Это твоя земля, это моя земля
+
+### [Джон Локк](https://ru.wikipedia.org/wiki/%D0%9B%D0%BE%D0%BA%D0%BA,_%D0%94%D0%B6%D0%BE%D0%BD)
+
+Локк считает, что существуют базовые неотъемлемые права, к которым относится естественное право на жизнь, свободу и собственность.
+
+Естественное состояние - состояние полной свободы, люди свободны и равны, нет никакой иерархии.
+Однако Локк делает оговорку - есть разница между свободой и своеволием.
+
+Естественный закон говорит о том, что мы не можем передать свои естественные права кому-либо, либо забрать чужие естественные права.
+
+Есть 2 варианта ответа на вопрос, откуда такой закон:
+1. *все люди - создания единого всемогущего и бесконечно мудрого творца, которому и принадлежат,и будут существовать столько, сколько угодно ему, а не столько, сколько они решат*
+> т.е. естественное право на самом деле не принадлежит человеку
+2. суть свободы не в том, чтобы просто творить все, что вздумается: *естественному состоянию присущ естественный закон, который на каждого накладывает обязательства и подразумевает понимание равенства, независимости и непозволительности причинения вреда здоровью, жизни и собственности другого*
+> это приводит к противоречию в Локковской концепции права: естественное право выходит неотчуждаемо(мы не можем отказаться от него, передать другому, обменять или продать), т.е. принадлежит человеку не до конца, но с другой стороны по причини же неотчуждаемости, это право еще сильнее и глубже принадлежит человеку (как его неотъемлемая часть)
+
+Также один из важных пунктов Локка: частная собственность возникает еще до появления государства:
+*собственность человека заключается в его личности; никто кроме него не имеет права на труд его тела, работу его рук; труд и работа - и есть его собственность*.
+> прибавляя к тому, что принадлежит всем (что природа дала всем) свой труд, человек переводит часть всеобщей собственности в свою личную
+
+Идея неотчуждаемости естественного права отдаляет Локка от либертарианцев (которые оставляет за человеком право продать себя в рабство или убить, например).
+
+Далее пример: фармкомпании США подали в суд на правительство ЮАР за использование лекарств-дженериков, созданных по их мненению по украденной у них технологии.
+
+В условиях же общества(общество - это когда ты добровольно отказываешься от естественного состояния) именно государство решает, что конкретно значит "уважать право на жизнь, свободу и собственность". Получается Локк здесь расходится с либертарианцами.
+> проблема естественного состояния - каждый "исполнитель", каждый волен покарать того, кто нарушил естественный закон; при этом мера наказания произвольна; единственный способ покинуть естественное состояние - это прийти к добровольному соглашению о передаче правоохранительной функции
+
+Но даже в обществе ("власть большинства") "большинство" не может отобрать естественные права.
+Но насколько велика власть "большинства", насколько обширны полномочия правительства, основанного на соглашении?
+
+Локк: *верховная власть не имеет права лишить человека ничего из его собственности без его согласия*.
+
+Однако есть противоречие с другим параграфом Локка: *человек, являющийся частью общества, обладает правом на собственность, что принадлежит ему **по законам этого общества***.
+
+Поэтому получается, что согласием следует считать общее соглашение (которое дается при вступлении в общество), а не личное согласие человека на конкретную меру (например, налог). И по причине того, что теперь собственность определяется конвенциально (законами общества), возможности правительство становятся уже не такими уж и ограниченными.
+По сути, получается концепция частной собственности, в которой нет согласия.
+
+Локк служил комиссаром по делам торговли и колоний и вполне мог искать оправдание присвоению землю без согласия.
+
+Фундаментальный вопрос: что дает согласие?
