idp2(Sandel): part 5

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -217,3 +217,33 @@
 Локк служил комиссаром по делам торговли и колоний и вполне мог искать оправдание присвоению землю без согласия.
 
 Фундаментальный вопрос: что дает согласие?
+
+## 5. Войска и матери по найму
+
+### Наемники
+
+Есть ли границы, которые нельзя пересекать даже с согласия большинства? Например, нарушать право на жизнь и отправлсять человека на войну.
+
+Может: *главное, чтобы политические указы или военные распоряжения не имели произвольный характер*.
+Сержант или офицер может послать солдата на верную смерть, но не имеют права забрать ни копейки из солдатского жалованья.
+Т.е. по Локку **согласие** - это не согласие отдельной личности платить налог или подчиняться приказу, а признание власти правительства и воли большинства.
+
+Аргументы против использования товарно денежных отношений в случае военной службы (наемников)
+1. по сути, оплачиваемая служба для солдат является экономическим принуждением
+2. военную службу не стоит рассмотривать как обычную работу - она требует патриотизма и чувства гражданского долга
+
+Тогда требуется определить, какого рода неравенство в первом случае и что такое гражданский долг во втором.
+Что на нас, как на граждан, накладывает обязательства, что является источником обязательств? Нужно ли согласие?
+
+***
+*Мои заметки*
+
+Лично я полностью поддерживаю аргумент 2. И более того, я расширил бы его: считаю, что гражданином общества, может считать только тот, кто готов пойти на военную службу и проливать свою кровь во благо этого общества.
+
+***
+### Материнство на продажу
+
+Стоит ли разрешать\запрещать рынок яйцеклеток\спермы?
+Возражения против суррогатного материнства:
+1. неинформированное согласие (будущая мать не могла знать, что почуствует к ребенку, т.е. какую ценность он для нее представит)
+2. договор о передаче ребенка ведет к дегумманизации - фактически, ребенок становится товаром
