idp2(Sandel): part 6

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -247,3 +247,59 @@
 Возражения против суррогатного материнства:
 1. неинформированное согласие (будущая мать не могла знать, что почуствует к ребенку, т.е. какую ценность он для нее представит)
 2. договор о передаче ребенка ведет к дегумманизации - фактически, ребенок становится товаром
+
+## 6. Мотив имеет значение
+
+[Иммануил Кант](https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D0%BD%D1%82,_%D0%98%D0%BC%D0%BC%D0%B0%D0%BD%D1%83%D0%B8%D0%BB)
+
+Кант отвергает утилитаризм. Понятие о том, что каждый человек священен, обладает правами, проистекает не из нашего права на себя, но из идеи о том, что мы разумные существа (способны к рассуждению).
+
+Когда мы ищем удовольствий или бежим от страданий, то это не имеет ничего общего со свободой, т.к. в этих случаях мы рабы своих потребностей и желаний.
+
+По Канту, действовать свободно значит действовать **автономно**, т.е. согласно закону, который я сам устанавливаю для себя.
+
+Гетерономность - антоним автономности: действуя **гетерномно** человек следует желаению, которое сам не выбирал.
+
+**Свобода - это автономность**.
+Поступать свободно не значит выбирать лучшие средства для достижения цели, это значит и выбирать саму цель тоже.
+
+Если же человека использовать как средство, т.е. он будет действовать гетерномно, то это удаляет то отличие, что есть у человека от других живых существ. Это по сути нарушает его права. И поэтому утилитаристы ошибаются (они относятся к людям как к средству достижения цели "наибольшего счастья наибольшего числа индивидов", а не как к цели).
+
+Но как же тогда оценить поступок с точки зрения нравственности, если нельзя опираться на пользу?
+
+По Канту, моральную ценность поступку придает наша воля, намерение, стоящее за поступком (важно поступать правильно и по правильной причине).
+
+Единственное, что соответсвует нравственной ценности, это поступок во имя долга. Противоположность такого поступка - поступок по велению склонностей (желания, нужды, предпочтения и т.д.).
+
+Только когда я действую из чувства долга, отвергая другие мотивы (в том числе и альтруизм и сострадание), только тогда я действую подлинно свободно и автономно, только тогда мою волю не определяют извне.
+
+Но тут встает вопрос: если каждый человек действует автономно, т.е. согласно закону, который он установил для себя, то что это за закон, един ли он для всех или для каждого он свой?
+
+Вот, что отвечает Кант:
+мотив, который приводит нас к тому, чтобы установать себе закон будучи автономными - причина общая для нас: от нас требуется уважать достоинство человека, каждый из нас разумное существо, все мы способны рассуждать и применение этой способности свойственно всем нам (по этой причине каждый обладает своим достоинством). И раз способность рассуждать универсальна и не зависит от обстоятельств жизни, то она универсальным образом диктует нам нравственный закон => действовать согласно морали значит действовать согласно закону, который формулируют для себя разумные существа. И этот здравый смысл появляется не в силу воспитания и обстоятельств жизни - это "чистый практический разум", который оперирует априорными убеждениями вне зависимости от контекста и эмпирических целей.
+
+***
+
+*Мои заметки*
+
+Из аудитории прозвучал вопрос: а нет ли здесь подмены нравственности - ведь в примере с продавцом магазина, который не обсчитвает покупателей, продавец может действовать из в некой мере эгоистичного мотива поступать "правильно", а не потому что так велит ему его натура.
+
+Я думаю, что в том то и смысл: в каждом человеке много плохого и эгоистичного (возможно даже, большая часть), но в отличии от животных, человек (благодаря разуму и воли) получает шанс действовать нравственно. И если, например, все естество продавца стремится извлекать выгоду любыми способами и обсчитывать покупателей, но он при этом следую чувству долга "честного" (по его представлениям) продавца этого не делает - это нравственно.
+***
+
+### Главный принцип нравственности
+
+3 главных мотива по Канту:
+
+1. мотивация: действовать для того, чтобы поступать правильно, а не из чувств (долг vs склонность)
+2. воля: я свободен, только если моя воля автономна (автономность vs гетерономность)
+> моральный закон (который мы сами устанавливаем) определяется разумом
+3. империтивы: гипотетический императив (если хочешь X делай Y: хочешь заработать хорошую репутацию, тогда не обсчитывай клиента) и категорический (категорический vs гипотетический)
+> если вы поступаете хорошо ради достижения некой цели - это **гипотетический** императив, если же поступок сам по себе благой, а значит необходимый согласно воле, которой управляет разум, то его исток - **категорический императив**
+
+Кант предлагает 3 разных формы категорического императива:
+1. формула универсального закона: поступай только согласно такой максиме, руководствуясь которой ты в то же время можешь пожелать, чтобы она стала всеобщим законом
+> можно проверить максиму (отвечает ли она категорическому императиву), мысленно распространив ее действие на всех: если все будут обманывать при обещаниях, то тогда обещания исчезнут => не стоит обещать и обманывать; но это отличается он консеквенциолизма Милля, потому что тут дело не в последствиях - таким способом проверяется, что не забылили мы за своими интересами общих (ваши поступки не должны зависеть от личных интересов)
+2. формула человечности как конечной цели:  поступай так, чтобы ты всегда относился к человечеству и в своём лице, и в лице всякого другого также, как к цели, и никогда не относился бы к нему только как к средству
+> если я даю ложное обещание, значит использую человека (например, получить взаймы деньги), а значит не уважаю и не признаю достоинство человека; именно поэтому убийства и самоубийства идут вразрез с категорическим императивом - т.к. убивают во имя какой то личной цели, т.е. используют человека как средство
+3. совершать всё, исходя из максимы своей воли как такой, которая могла бы также иметь предметом самое себя как волю, устанавливающую всеобщие законы
