--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -303,3 +303,26 @@
 2. формула человечности как конечной цели:  поступай так, чтобы ты всегда относился к человечеству и в своём лице, и в лице всякого другого также, как к цели, и никогда не относился бы к нему только как к средству
 > если я даю ложное обещание, значит использую человека (например, получить взаймы деньги), а значит не уважаю и не признаю достоинство человека; именно поэтому убийства и самоубийства идут вразрез с категорическим императивом - т.к. убивают во имя какой то личной цели, т.е. используют человека как средство
 3. совершать всё, исходя из максимы своей воли как такой, которая могла бы также иметь предметом самое себя как волю, устанавливающую всеобщие законы
+
+
+## 7. Как правильно врать
+
+Как возможен категорический императив, как возможна мораль?
+Мораль строится не на опыте - чтобы мы ни видели вокруг себя, чтобы ни говорила наука, мы не выводим из этого напрямую моральный закон.
+
+Ложь противоречит категорическому императиву. Но если в дверь стучится убийца, который пришел за вашим другом, которого вы спрятали у себя, допустимо ли лгать? По Канту - нет.
+
+Также есть ли разница между ложью и сбивающий с толку правдой (полуправдой, которая не дает прямого и четкого ответа)? По Канту - да. Например, если человеку подарили ужасный галстук, он может сказать "В жизни не видел такого галстука! Спасибо".
+
+В полуправде Кант видит цель не лгать и в этом некое уважение морали.
+
+
+### Общественный договор
+
+[Джон Ролз](https://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%BB%D0%B7,_%D0%94%D0%B6%D0%BE%D0%BD) подробно описал гипотетическое соглашение, которое ложится в основу общества.
+
+Сам по себе факт соглашения недостаточен для гарантии справедливости договора.
+В обычном договоре моральная ценность исходит из двух идей: автономность и взаимность.
+В реальности может не быть автономности (силы сторон в переговорах не равны) или взаимности (если есть разница в уровне осведомленности сторон).
+
+По Роулзу справедливость договора возможна в условиях равенства сторон, которое создаст [занавес неведения](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BD%D0%B0%D0%B2%D0%B5%D1%81_%D0%BD%D0%B5%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D1%8F). Это гипотетический договор.
