idp2(Sandel): part 8

--- a/Гарвард.Справедливость.md
+++ b/Гарвард.Справедливость.md
@@ -322,7 +322,52 @@
 [Джон Ролз](https://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%BB%D0%B7,_%D0%94%D0%B6%D0%BE%D0%BD) подробно описал гипотетическое соглашение, которое ложится в основу общества.
 
 Сам по себе факт соглашения недостаточен для гарантии справедливости договора.
-В обычном договоре моральная ценность исходит из двух идей: автономность и взаимность.
+В обычном договоре моральная ценность исходит из двух идей: автономность(сознательное согласие) и взаимность(взаимная выгода).
 В реальности может не быть автономности (силы сторон в переговорах не равны) или взаимности (если есть разница в уровне осведомленности сторон).
 
 По Роулзу справедливость договора возможна в условиях равенства сторон, которое создаст [занавес неведения](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BD%D0%B0%D0%B2%D0%B5%D1%81_%D0%BD%D0%B5%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D1%8F). Это гипотетический договор.
+
+
+## 8. Каждому по возможностям
+
+По каким понятиям делить блага?
+
+1. утилитаризм ("принцип наибольшего счасться наибольшего количества индивидов") отвергается из-за наличия угнетаемого большинством меньшиства
+2. требуется каким-то образом обеспечить равное распределение ресурсов
+
+Принцип справедливого неравенства по Ролзу: определенное социально-экономическое неравенство допустимо, если оно работает на благо всех и каждого. Справедливо допустить неравенство, когда оно приносит пользу наименее состоятельным.
+Например, сверхдоходы Б.Гейтса и М.Джордана справедливы только при такой системе, которая обеспечит преимущества и менее состоятельным.
+
+При этом Ролз считает, что даже меритократия *все равно допускает разброс результатов по причине природного, не зависящего от нас распределения способностей*. Ведь даже то, каким по счету родился ребенок, влияет на его успех.
+
+### Теории справедливого распределения
+1. либертарианство: свободные рыночные отношения в сочетании с формальным равенством
+2. меритократия: равные возможности
+3. эгалитаризм: принцип справедливого неравенства (пусть выдающиеся люди зарабатывают состояния при условия, что это выгодно не только им)
+
+Возражения против эгалитаризма:
+- мотивация: если, например, налог на М.Джордана достигнет 70%, станет ли он вообще играть в баскетболл
+- старания: 2ое трудолюбивых рабочих, они оба достойны вознаграждения соразмерно принесенной пользе
+> Ролз: но ведь польза зависит в т.ч. и от природных талантов, а значит не совсем наша заслуга и поэтому справедливое распределение благ не зависит от принесенной пользы;
+> даже то, что какой-либо талантливый человек родился именно в том обществе и в то время, в котором его таланты востребована - случайность => и выгоды, которые он получает благодаря своему таланту отчасти случайность
+- самопринадлежность: этот аргумент либертарианцев, считающих, что человек (как и плоды его) труда принадлежат только ему, отбирать их - несправедливо, это означает, что человек больше сам себе не принадлежит
+> Ролз: "вероятно мы не так уж и принадлежим себе в этом смысле"
+
+
+Фридман: "Жизнь несправедлива. Соблазнительно считать, что правительство может это исправить".
+Ролз: "Естественное распределение нельзя называть справедливым или несправедливым. Человек рождается и занимает определенное положение в обществе. Это просто факты действительности. А **справедливость** - это категория, в рамках которой работают с этими фактами общественные институты".
+
+***
+
+*Мои заметки*
+
+Снова приведу:
+[источник РБК](https://www.rbc.ru/economics/16/12/2017/5a33e2fc9a79471b6d846e24)
+
+![alt text](https://s0.rbk.ru/v6_top_pics/resized/945xH/media/img/5/16/755134446399165.jpg "Logo Title Text 1")
+
+Это в общем о распределении благ. В частности, можно вспомнить какая доступность качественного образования была в СССР.
+
+Для меня очевидно, что с тех пор, как производство стало носить общественный характер, не может быть справедливого распределения благ при частном характере присвоения плодов производства.
+
+***
